docs(java): expand virtual-threads page with depth
Replaces the 139-line overview with a 261-line deep dive:

- JEP timeline table from JDK 19 through JDK 25, separating the
  finalized virtual threads API (JDK 21, JEP 444) from the still-
  in-preview structured concurrency (JEP 505) and scoped values
  (JEP 506), so readers can tell what is production-ready today.
- Internals section: continuation-on-heap model, mount/unmount cycle,
  explicit list of yielding triggers vs pinning triggers, expanded
  Mermaid diagram with continuation save/restore.
- Three creation patterns (Thread.ofVirtual, unstarted builders,
  newVirtualThreadPerTaskExecutor) with the third flagged as the
  recommended drop-in replacement for fixed pools.
- Structured concurrency code sample plus the JDK 24 API churn note
  (StructuredTaskScope.Open + Joiner replacing ShutdownOnFailure).
- ScopedValues rationale and code sample; migration guidance for
  ThreadLocal.
- Performance numbers: 1us creation vs 100us, 1M virtual threads
  feasibility, carrier pool sizing rationale.
- Pitfalls section: synchronized pinning (with JDK 24 JEP 491 fix
  noted), ThreadLocal cleanup, JNI pinning, carrier pool tuning,
  CPU-bound guidance.
- Comparison table vs goroutines, Kotlin coroutines, Reactor.
- 7-step incremental migration path for existing servlet services.
- Expanded interview questions (8) with concrete answers.
- References to openjdk.org JEPs and Oracle / Spring / Helidon docs.

No other files touched. mdbook build passes clean.